# simple_rag

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
movie-rag/: requirements.txt  test.ipynb
movie-rag/movie_rag/: __init__.py  index.py  llm.py
movie-rag/notebooks/: preprocessing.ipynb
notebooks/: basic_pipeline.ipynb  introduccion_rag.ipynb  preprocessing_movies.ipynb
simple_rag/: __init__.py  index.py  llm.py  pipeline.py  pyproject.toml  requirements.txt
simple_rag/simple_rag/: index.py  llm.py  pipeline.py
simple_rag/streamlit/: app.py
simple_rag/tests/: test_index.py
streamlit/: app.py
